pic form spacing fix

--- a/app/assets/stylesheets/profile/profilePage.scss
+++ b/app/assets/stylesheets/profile/profilePage.scss
@@ -128,6 +128,7 @@
 .pic-button {
     width: fit-content;
     margin-left: 5px;
+    margin-top: 5px;
 }
 
 .pic-accept-btn {
